# nats-nsc

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
docs/: index.md  nats_nsc_module.md
src/nats_nsc/: __init__.py  common.py  create_user.py  create_user_mod.py  nk.py  nsc_utils.py
tests/: nats.cfg  test_basic.py  test_nk.py  test_setup.py
tests/nsc_workdir/: nsc.json
tests/nsc_workdir/keys/: DO_NOT_USE
tests/nsc_workdir/nats-nsc-testing/: .nsc  nats-nsc-testing.jwt
tests/nsc_workdir/nats-nsc-testing/accounts/SYS/: SYS.jwt
tests/nsc_workdir/nats-nsc-testing/accounts/SYS/users/: sys.jwt
tests/nsc_workdir/nats-nsc-testing/accounts/nats-nsc-testing/: nats-nsc-testing.jwt
tests/nsc_workdir/nats-nsc-testing/accounts/nats-nsc-testing/users/: nats-nsc-testing.jwt
